--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,8 @@
         android:networkSecurityConfig="@xml/network_security_config"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.BookHub">
-        <activity android:name=".activity.CartActivity"></activity>
+        android:theme="@style/Theme.FoodRunner">
+        <activity android:name=".activity.CartActivity" />
         <activity android:name=".activity.RestaurantDetailsActivty" />
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.RegisterActivity" />
@@ -27,7 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
     </application>
 
 </manifest>
